# kbc-icp-incubator-common

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json
icp/: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json
icp/canisters/: .gitkeep
icp/src/services/storage/: Cargo.toml
icp/src/services/storage/src/: lib.rs  memory.rs
icp/src/services/storage/src/guards/: assert_has_one_role_in_file_or_organization.rs  assert_has_one_role_in_organization.rs  assert_is_member_of_organization.rs  assert_is_member_of_organization_or_file.rs
icp/src/services/storage/src/models/: file.rs  file_chunk.rs  file_info.rs  pending_file.rs  shared_file.rs  shared_link.rs
icp/src/services/storage/src/queries/: get_file.rs  get_file_chunk.rs  get_file_members.rs  get_file_shares.rs  get_files_for_organization.rs
icp/src/services/storage/src/repositories/: file_repository.rs  mod.rs  share_repository.rs
icp/src/services/storage/src/updates/: add_member.rs  create_file.rs  get_shared_file_chunk.rs  put_chunk.rs  share_file.rs
package/: .gitignore  .npmignore  README.md  babel.config.js  index.ts  package-lock.json  package.json  transform-declarations.js  tsconfig.json
package/drivers/: ICPIdentityDriver.ts  ICPSiweDriver.ts  ICPStorageDriver.ts
package/types/: ResourceSpec.ts  (+1 more)
scripts/: deploy-local.sh  deploy-mainnet.sh
src/libraries/shared_types/: Cargo.toml
src/libraries/shared_types/src/: lib.rs  organization_id.rs  permission_key_ext.rs  role.rs  user.rs
src/libraries/shared_types/src/trie/: mod.rs  trie.rs  trie_node.rs
(+62 files in other folders)
