[package]
name = "shared_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-stable-structures = "0.6.3"
serde = {version="1.0.197", features=["derive"]}
serde_derive = "1.0.197"
