[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
constant_time_eq = "0.3.0"
ic-cdk = "0.12"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.2"
num-traits = "0.2.18"
serde = {version="1.0.197", features=["derive"]}
serde_bytes = "0.11.14"
serde_derive = "1.0.197"
sha2 = "0.10.8"
guards = {path = "../../libraries/guards" }
shared_types = {path = "../../libraries/shared_types" }
c2c_permission = {path = "../../clients/c2c_permission" }
futures = "0.3.30"
base64 = "0.22.0"
